Added make command and test suite for throttling

--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -10,6 +10,7 @@ env:
       links-and-cookies
       template-flow
       user-operations
+      throttling
 
 phases:
   install:
@@ -59,6 +60,7 @@ phases:
       - make test-links-and-cookies; exit 0
       - make test-template-flow; exit 0
       - make test-user-operations; exit 0
+      - make test-throttling; exit 0
       - echo "Test run completed."
       - touch "$(pwd)/test-failures"
       - chmod +rw "$(pwd)/test-failures"
