Created test file, make command and added to buildspec

--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -11,6 +11,7 @@ env:
       template-flow
       user-operations
       throttling
+      session-timeout
 
 phases:
   install:
@@ -61,6 +62,7 @@ phases:
       - make test-template-flow; exit 0
       - make test-user-operations; exit 0
       - make test-throttling; exit 0
+      - make test-session-timeout; exit 0
       - echo "Test run completed."
       - touch "$(pwd)/test-failures"
       - chmod +rw "$(pwd)/test-failures"
