Removed session timeout tests temporarily

--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -4,7 +4,6 @@ env:
   variables:
     testsuites: >-
       throttling
-      session-timeout
 
 phases:
   install:
@@ -55,7 +54,7 @@ phases:
       # - make test-template-flow; exit 0
       # - make test-user-operations; exit 0
       - make test-throttling; exit 0
-      - make test-session-timeout; exit 0
+      # - make test-session-timeout; exit 0
       - echo "Test run completed."
       - touch "$(pwd)/test-failures"
       - chmod +rw "$(pwd)/test-failures"
