--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -3,6 +3,14 @@ version: 0.2
 env:
   variables:
     testsuites: >-
+      broadcast-flow
+      cbc-integration
+      platform-admin-flow
+      authentication-flow
+      links-and-cookies
+      template-flow
+      user-operations
+      throttling
       session-timeout
 
 phases:
@@ -46,14 +54,14 @@ phases:
   build:
     on-failure: CONTINUE
     commands:
-      # - make test-broadcast-flow; exit 0
-      # - make test-cbc-integration; exit 0
-      # - make test-platform-admin-flow; exit 0
-      # - make test-authentication-flow; exit 0
-      # - make test-links-and-cookies; exit 0
-      # - make test-template-flow; exit 0
-      # - make test-user-operations; exit 0
-      # - make test-throttling; exit 0
+      - make test-broadcast-flow; exit 0
+      - make test-cbc-integration; exit 0
+      - make test-platform-admin-flow; exit 0
+      - make test-authentication-flow; exit 0
+      - make test-links-and-cookies; exit 0
+      - make test-template-flow; exit 0
+      - make test-user-operations; exit 0
+      - make test-throttling; exit 0
       - make test-session-timeout; exit 0
       - echo "Test run completed."
       - python3.9 ./scripts/report-test-results.py $(pwd) $testsuites
