--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -54,7 +54,10 @@ phases:
     on-failure: CONTINUE
     commands:
       - make test-broadcast-flow; exit 0
-      - make test-cbc-integration; exit 0
+      - |
+        if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
+          make test-cbc-integration; exit 0
+        fi
       - make test-platform-admin-flow; exit 0
       - make test-authentication-flow; exit 0
       - make test-links-and-cookies; exit 0
