Log when a suite has been skipped

--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -57,6 +57,8 @@ phases:
       - |
         if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
           make test-cbc-integration; exit 0
+        else
+          echo "SKIPPING WORKFLOW 'test-cbc-integration'..."
         fi
       - make test-platform-admin-flow; exit 0
       - make test-authentication-flow; exit 0
