--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -4,7 +4,6 @@ env:
   variables:
     testsuites: >-
       broadcast-flow
-      cbc-integration
       platform-admin-flow
       authentication-flow
       links-and-cookies
@@ -54,8 +53,10 @@ phases:
     on-failure: CONTINUE
     commands:
       - make test-broadcast-flow; exit 0
+      # Need to add CBC integration into the list of test reports, in the proper place, if it is executed - hence the below
       - |
         if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
+          testsuites=("broadcast-flow" "cbc-integration" "platform-admin-flow" "authentication-flow" "links-and-cookies" "template-flow" "user-operations" "throttling" "session-timeout")
           make test-cbc-integration; exit 0
         else
           echo "SKIPPING WORKFLOW 'test-cbc-integration'..."
