--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -56,7 +56,7 @@ phases:
       # Need to add CBC integration into the list of test reports, in the proper place, if it is executed - hence the below
       - |
         if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
-          testsuites=("broadcast-flow" "cbc-integration" "platform-admin-flow" "authentication-flow" "links-and-cookies" "template-flow" "user-operations" "throttling" "session-timeout")
+          testsuites="$testsuites cbc-integration"
           make test-cbc-integration; exit 0
         else
           echo "SKIPPING WORKFLOW 'test-cbc-integration'..."
