--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -53,6 +53,8 @@ phases:
     on-failure: CONTINUE
     commands:
       # Need to add CBC integration into the list of test reports, in the proper place, if it is executed - hence the below
+      # The if below doesn't check for truthiness, but instead "true", because CodePipeline *requires* a value - therefore it will *always* be truthy.
+      - make test-broadcast-flow; exit 0
       - |
         if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
           testsuites="$testsuites cbc-integration"
@@ -60,7 +62,6 @@ phases:
         else
           echo "SKIPPING WORKFLOW 'test-cbc-integration'..."
         fi
-      - make test-broadcast-flow; exit 0
       - make test-platform-admin-flow; exit 0
       - make test-authentication-flow; exit 0
       - make test-links-and-cookies; exit 0
