--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -3,6 +3,8 @@ version: 0.2
 env:
   variables:
     testsuites: >-
+      broadcast-flow
+      platform-admin-flow
       authentication-flow
       links-and-cookies
       template-flow
@@ -52,15 +54,15 @@ phases:
     commands:
       # Need to add CBC integration into the list of test reports, in the proper place, if it is executed - hence the below
       # The if below doesn't check for truthiness, but instead "true", because CodePipeline *requires* a value - therefore it will *always* be truthy.
-      # - make test-broadcast-flow; exit 0
-      # - |
-      #   if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
-      #     testsuites="$testsuites cbc-integration"
-      #     make test-cbc-integration; exit 0
-      #   else
-      #     echo "SKIPPING WORKFLOW 'test-cbc-integration'..."
-      #   fi
-      # - make test-platform-admin-flow; exit 0
+      - make test-broadcast-flow; exit 0
+      - |
+        if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
+          testsuites="$testsuites cbc-integration"
+          make test-cbc-integration; exit 0
+        else
+          echo "SKIPPING WORKFLOW 'test-cbc-integration'..."
+        fi
+      - make test-platform-admin-flow; exit 0
       - make test-authentication-flow; exit 0
       - make test-links-and-cookies; exit 0
       - make test-template-flow; exit 0
