--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -56,8 +56,9 @@ phases:
       # The if below doesn't check for truthiness, but instead "true", because CodePipeline *requires* a value - therefore it will *always* be truthy.
       # - make test-broadcast-flow; exit 0
       - |
+        export running_testsuites=$testsuites
         if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
-          export testsuites="$testsuites cbc-integration"
+          export running_testsuites="$running_testsuites cbc-integration"
           make test-cbc-integration; exit 0
         else
           echo "SKIPPING WORKFLOW 'test-cbc-integration'..."
@@ -70,12 +71,12 @@ phases:
       # - make test-throttling; exit 0
       # - make test-session-timeout; exit 0
       - echo "Test run completed."
-      - echo $testsuites
-      - python3.9 ./scripts/report-test-results.py $(pwd) $testsuites
+      - echo $running_testsuites
+      - python3.9 ./scripts/report-test-results.py $(pwd) $running_testsuites
 
   post_build:
     commands:
-      - python3.9 ./scripts/signal-build-pass-or-fail.py $(pwd) $testsuites
+      - python3.9 ./scripts/signal-build-pass-or-fail.py $(pwd) $running_testsuites
 
 artifacts:
   files:
