--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -56,9 +56,9 @@ phases:
       # The if below doesn't check for truthiness, but instead "true", because CodePipeline *requires* a value - therefore it will *always* be truthy.
       # - make test-broadcast-flow; exit 0
       - |
-        export running_testsuites=$testsuites
+        export runningsuites=$testsuites
         if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
-          export running_testsuites="$running_testsuites cbc-integration"
+          export runningsuites="$runningsuites cbc-integration"
           make test-cbc-integration; exit 0
         else
           echo "SKIPPING WORKFLOW 'test-cbc-integration'..."
@@ -72,7 +72,7 @@ phases:
       # - make test-session-timeout; exit 0
       - echo "Test run completed."
       - echo $running_testsuites
-      - python3.9 ./scripts/report-test-results.py $(pwd) $running_testsuites
+      - python3.9 ./scripts/report-test-results.py $(pwd) $runningsuites
 
   post_build:
     commands:
