--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -57,8 +57,6 @@ phases:
       # - make test-broadcast-flow; exit 0
       - |
         if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
-          export testsuites="$testsuites cbc-integration"
-          echo $testsuites
           make test-cbc-integration; exit 0
         else
           echo "SKIPPING WORKFLOW 'test-cbc-integration'..."
@@ -72,7 +70,11 @@ phases:
       # - make test-session-timeout; exit 0
       - echo "Test run completed."
       - echo $testsuites
-      - python3.9 ./scripts/report-test-results.py $(pwd) $testsuites
+      - |
+        if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
+          export testsuites="$testsuites cbc-integration"
+        else
+        python3.9 ./scripts/report-test-results.py $(pwd) $testsuites
 
   post_build:
     commands:
