--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -57,7 +57,6 @@ phases:
       - make test-broadcast-flow; exit 0
       - |
         if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
-          testsuites="$testsuites cbc-integration"
           make test-cbc-integration; exit 0
         else
           echo "SKIPPING WORKFLOW 'test-cbc-integration'..."
@@ -70,10 +69,18 @@ phases:
       - make test-throttling; exit 0
       - make test-session-timeout; exit 0
       - echo "Test run completed."
-      - python3.9 ./scripts/report-test-results.py $(pwd) $testsuites
+      - |
+        if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
+          export testsuites="$testsuites cbc-integration"
+        fi
+        python3.9 ./scripts/report-test-results.py $(pwd) $testsuites
 
   post_build:
     commands:
+      - |
+        if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
+          export testsuites="$testsuites cbc-integration"
+        fi
       - python3.9 ./scripts/signal-build-pass-or-fail.py $(pwd) $testsuites
 
 artifacts:
