Added session timeout test suite back & changed assertion for error text

--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -4,6 +4,7 @@ env:
   variables:
     testsuites: >-
       broadcast-flow
+      session-timeout
 
 phases:
   install:
@@ -60,7 +61,7 @@ phases:
       # - make test-template-flow; exit 0
       # - make test-user-operations; exit 0
       # - make test-throttling; exit 0
-      # - make test-session-timeout; exit 0
+      - make test-session-timeout; exit 0
       - echo "Test run completed."
       - |
         if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
