--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -3,7 +3,7 @@ version: 0.2
 env:
   variables:
     testsuites: >-
-      broadcast-flow
+      user-operations
 
 phases:
   install:
@@ -47,7 +47,7 @@ phases:
     commands:
       # Need to add CBC integration into the list of test reports, in the proper place, if it is executed - hence the below
       # The if below doesn't check for truthiness, but instead "true", because CodePipeline *requires* a value - therefore it will *always* be truthy.
-      - make test-broadcast-flow; exit 0
+      # - make test-broadcast-flow; exit 0
       - |
         if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
           make test-cbc-integration; exit 0
@@ -58,7 +58,7 @@ phases:
       # - make test-authentication-flow; exit 0
       # - make test-links-and-cookies; exit 0
       # - make test-template-flow; exit 0
-      # - make test-user-operations; exit 0
+      - make test-user-operations; exit 0
       # - make test-throttling; exit 0
       # - make test-session-timeout; exit 0
       - echo "Test run completed."
