--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -3,7 +3,7 @@ version: 0.2
 env:
   variables:
     testsuites: >-
-      broadcast-flow
+      cbc-integration
 
 phases:
   install:
@@ -47,13 +47,13 @@ phases:
     commands:
       # Need to add CBC integration into the list of test reports, in the proper place, if it is executed - hence the below
       # The if below doesn't check for truthiness, but instead "true", because CodePipeline *requires* a value - therefore it will *always* be truthy.
-      - make test-broadcast-flow; exit 0
-      # - |
-      #   if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
-      #     make test-cbc-integration; exit 0
-      #   else
-      #     echo "SKIPPING WORKFLOW 'test-cbc-integration'..."
-      #   fi
+      # - make test-broadcast-flow; exit 0
+      - |
+        if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
+          make test-cbc-integration; exit 0
+        else
+          echo "SKIPPING WORKFLOW 'test-cbc-integration'..."
+        fi
       # - make test-platform-admin-flow; exit 0
       # - make test-authentication-flow; exit 0
       # - make test-links-and-cookies; exit 0
@@ -62,12 +62,11 @@ phases:
       # - make test-throttling; exit 0
       # - make test-session-timeout; exit 0
       - echo "Test run completed."
-      # - |
-      #   if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
-      #     export testsuites="$testsuites cbc-integration"
-      #   fi
-      #   python3.9 ./scripts/report-test-results.py $(pwd) $testsuites
-      - python3.9 ./scripts/report-test-results.py $(pwd) $testsuites
+      - |
+        if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
+          export testsuites="$testsuites cbc-integration"
+        fi
+        python3.9 ./scripts/report-test-results.py $(pwd) $testsuites
 
   post_build:
     commands:
