run failing tests only

--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -5,11 +5,7 @@ env:
     testsuites: >-
       platform-admin-flow
       authentication-flow
-      links-and-cookies
-      template-flow
       user-operations
-      throttling
-      session-timeout
 
 phases:
   install:
@@ -62,11 +58,11 @@ phases:
       #   fi
       - make test-platform-admin-flow; exit 0
       - make test-authentication-flow; exit 0
-      - make test-links-and-cookies; exit 0
-      - make test-template-flow; exit 0
+      # - make test-links-and-cookies; exit 0
+      # - make test-template-flow; exit 0
       - make test-user-operations; exit 0
-      - make test-throttling; exit 0
-      - make test-session-timeout; exit 0
+      # - make test-throttling; exit 0
+      # - make test-session-timeout; exit 0
       - echo "Test run completed."
       # - |
       #   if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
