Revert "test user operations"
This reverts commit cc56cd75603bbd57708170634671db1dfdc21913.

--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -3,7 +3,7 @@ version: 0.2
 env:
   variables:
     testsuites: >-
-      user-operations
+      template-flow
 
 phases:
   install:
@@ -57,8 +57,8 @@ phases:
       # - make test-platform-admin-flow; exit 0
       # - make test-authentication-flow; exit 0
       # - make test-links-and-cookies; exit 0
-      # - make test-template-flow; exit 0
-      - make test-user-operations; exit 0
+      - make test-template-flow; exit 0
+      # - make test-user-operations; exit 0
       # - make test-throttling; exit 0
       # - make test-session-timeout; exit 0
       - echo "Test run completed."
