--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -4,6 +4,7 @@ env:
   variables:
     testsuites: >-
       template-flow
+      user-operations
 
 phases:
   install:
@@ -58,7 +59,7 @@ phases:
       # - make test-authentication-flow; exit 0
       # - make test-links-and-cookies; exit 0
       - make test-template-flow; exit 0
-      # - make test-user-operations; exit 0
+      - make test-user-operations; exit 0
       # - make test-throttling; exit 0
       # - make test-session-timeout; exit 0
       - echo "Test run completed."
