restore full test run

--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -3,7 +3,14 @@ version: 0.2
 env:
   variables:
     testsuites: >-
+      broadcast-flow
+      platform-admin-flow
+      authentication-flow
+      links-and-cookies
+      template-flow
+      user-operations
       throttling
+      session-timeout
 
 phases:
   install:
@@ -47,34 +54,33 @@ phases:
     commands:
       # Need to add CBC integration into the list of test reports, in the proper place, if it is executed - hence the below
       # The if below doesn't check for truthiness, but instead "true", because CodePipeline *requires* a value - therefore it will *always* be truthy.
-      # - make test-broadcast-flow; exit 0
-      # - |
-      #   if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
-      #     make test-cbc-integration; exit 0
-      #   else
-      #     echo "SKIPPING WORKFLOW 'test-cbc-integration'..."
-      #   fi
-      # - make test-platform-admin-flow; exit 0
-      # - make test-authentication-flow; exit 0
-      # - make test-links-and-cookies; exit 0
-      # - make test-template-flow; exit 0
-      # - make test-user-operations; exit 0
+      - make test-broadcast-flow; exit 0
+      - |
+        if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
+          make test-cbc-integration; exit 0
+        else
+          echo "SKIPPING WORKFLOW 'test-cbc-integration'..."
+        fi
+      - make test-platform-admin-flow; exit 0
+      - make test-authentication-flow; exit 0
+      - make test-links-and-cookies; exit 0
+      - make test-template-flow; exit 0
+      - make test-user-operations; exit 0
       - make test-throttling; exit 0
-      # - make test-session-timeout; exit 0
-      # - echo "Test run completed."
-      # - |
-      #   if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
-      #     export testsuites="$testsuites cbc-integration"
-      #   fi
-      #   python3.9 ./scripts/report-test-results.py $(pwd) $testsuites
-      - python3.9 ./scripts/report-test-results.py $(pwd) $testsuites
+      - make test-session-timeout; exit 0
+      - echo "Test run completed."
+      - |
+        if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
+          export testsuites="$testsuites cbc-integration"
+        fi
+        python3.9 ./scripts/report-test-results.py $(pwd) $testsuites
 
   post_build:
     commands:
-      # - |
-      #   if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
-      #     export testsuites="$testsuites cbc-integration"
-      #   fi
+      - |
+        if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
+          export testsuites="$testsuites cbc-integration"
+        fi
       - python3.9 ./scripts/signal-build-pass-or-fail.py $(pwd) $testsuites
 
 artifacts:
