--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -3,7 +3,15 @@ version: 0.2
 env:
   variables:
     testsuites: >-
+      broadcast-flow
+      platform-admin-flow
       authentication-flow
+      links-and-cookies
+      template-flow
+      user-operations
+      throttling
+      session-timeout
+
 phases:
   install:
     runtime-versions:
@@ -53,7 +61,13 @@ phases:
         else
           echo "SKIPPING WORKFLOW 'test-cbc-integration'..."
         fi
+      - make test-platform-admin-flow; exit 0
       - make test-authentication-flow; exit 0
+      - make test-links-and-cookies; exit 0
+      - make test-template-flow; exit 0
+      - make test-user-operations; exit 0
+      - make test-throttling; exit 0
+      - make test-session-timeout; exit 0
       - echo "Test run completed."
       - |
         if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
