--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -33,9 +33,6 @@ phases:
       - wget -O /tmp/chromedriver.zip `cat /tmp/chromedriver_url`
       - unzip -j /tmp/chromedriver.zip chromedriver-linux64/chromedriver -d /usr/local/bin/
 
-      # upgrade pip
-      - pip install --upgrade pip
-
       - apt-get install -f -y
 
   pre_build:
@@ -46,7 +43,7 @@ phases:
       - . $VENV_TESTS/bin/activate
       - chmod +x environment.sh
       - . ./environment.sh
-      - python3.9 -m pip install --upgrade pip wheel setuptools==79
+      - python3.9 -m pip install --upgrade pip==25.0.1 wheel setuptools==79
       - make bootstrap
 
   build:
