--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -15,7 +15,7 @@ env:
 phases:
   install:
     runtime-versions:
-      python: 3.9
+      python: 3.12
 
     commands:
       - apt update
@@ -39,11 +39,11 @@ phases:
     commands:
       - cd $CODEBUILD_SRC_DIR
       - VENV_TESTS='/venv/eas-tests'
-      - python3.9 -m venv $VENV_TESTS
+      - python3.12 -m venv $VENV_TESTS
       - . $VENV_TESTS/bin/activate
       - chmod +x environment.sh
       - . ./environment.sh
-      - python3.9 -m pip install --upgrade pip==25.0.1 wheel setuptools
+      - python3.12 -m pip install --upgrade pip wheel setuptools
       - make bootstrap
 
   build:
@@ -70,7 +70,7 @@ phases:
         if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
           export testsuites="$testsuites cbc-integration"
         fi
-        python3.9 ./scripts/report-test-results.py $(pwd) $testsuites
+        python3.12 ./scripts/report-test-results.py $(pwd) $testsuites
 
   post_build:
     commands:
@@ -78,7 +78,7 @@ phases:
         if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
           export testsuites="$testsuites cbc-integration"
         fi
-      - python3.9 ./scripts/signal-build-pass-or-fail.py $(pwd) $testsuites
+      - python3.12 ./scripts/signal-build-pass-or-fail.py $(pwd) $testsuites
 
 artifacts:
   files:
