--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -31,7 +31,7 @@ phases:
       - apt-get install -yqq unzip jq
       - curl -s https://googlechromelabs.github.io/chrome-for-testing/last-known-good-versions-with-downloads.json | jq -rc '.channels.Stable.downloads.chromedriver[] | select(.platform == "linux64").url' > /tmp/chromedriver_url
       - wget -O /tmp/chromedriver.zip `cat /tmp/chromedriver_url`
-      - unzip -j /tmp/chromedriver.zip chromedriver-linux64/chromedriver -d /usr/local/bin/
+      - unzip -o -j /tmp/chromedriver.zip chromedriver-linux64/chromedriver -d /usr/local/bin/
 
       - apt-get install -f -y
 
