--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -3,7 +3,7 @@ version: 0.2
 env:
   variables:
     testsuites: >-
-      broadcast-flow
+      platform-admin-flow
 
 phases:
   install:
@@ -44,20 +44,12 @@ phases:
     commands:
       # Need to add CBC integration into the list of test reports, in the proper place, if it is executed - hence the below
       # The if below doesn't check for truthiness, but instead "true", because CodePipeline *requires* a value - therefore it will *always* be truthy.
-      - make test-broadcast-flow; exit 0
+      - make test-platform-admin-flow; exit 0
       - echo "Test run completed."
-      - |
-        if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
-          export testsuites="$testsuites cbc-integration"
-        fi
-        python3.12 ./scripts/report-test-results.py $(pwd) $testsuites
+      - python3.12 ./scripts/report-test-results.py $(pwd) $testsuites
 
   post_build:
     commands:
-      - |
-        if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
-          export testsuites="$testsuites cbc-integration"
-        fi
       - python3.12 ./scripts/signal-build-pass-or-fail.py $(pwd) $testsuites
 
 artifacts:
