--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,5 @@
 markers =
     template_preview: mark a tests to run for template-preview builds.
     antivirus: mark a test to run for antivirus builds.
+addopts = --headed
+pythonpath = "."
