Create Playwright traces for each test

--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -84,4 +84,4 @@ artifacts:
   files:
     - screenshots/*
     - functional-test-reports/*
-    - functional-traces/*
+    - functional-test-traces/*
