--- a/.gitignore
+++ b/.gitignore
@@ -64,7 +64,11 @@ target/
 /venv
 docker.env
 
-screenshots
+screenshots/
+functional-test-reports/
+functional-test-traces/
+logs/
+
 settings.json
 
 # Tenant-specific Dockerfile
