Add report section to CodeBuild

--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -86,3 +86,9 @@ artifacts:
     - screenshots/*
     - functional-test-reports/*
     - functional-test-traces/*
+
+reports:
+  functional-test-reports:
+    files:
+      - functional-test-reports/*.xml
+    file-format: JUNITXML
