--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -89,5 +89,5 @@ artifacts:
 reports:
   functional-test-reports:
     files:
-      - functional-test-reports/*.xml
+      - functional-test-reports/*
     file-format: JUNITXML
