Only try one test report flow?

--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -87,7 +87,7 @@ artifacts:
     - functional-test-traces/*
 
 reports:
-  functional-test-reports:
+  platform-admin-flow:
     files:
-      - functional-test-reports/*
+      - functional-test-reports/platform-admin-flow
     file-format: JUNITXML
