--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -52,7 +52,7 @@ phases:
       # Need to add CBC integration into the list of test reports, in the proper place, if it is executed - hence the below
       # The if below doesn't check for truthiness, but instead "true", because CodePipeline *requires* a value - therefore it will *always* be truthy.
       - export CI=true # Switch to headless mode
-      - make test-broadcast-flow; exit 0
+      # - make test-broadcast-flow; exit 0
       - |
         if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
           make test-cbc-integration; exit 0
@@ -60,11 +60,11 @@ phases:
           echo "SKIPPING WORKFLOW 'test-cbc-integration'..."
         fi
       - make test-platform-admin-flow; exit 0
-      - make test-authentication-flow; exit 0
-      - make test-links-and-cookies; exit 0
-      - make test-template-flow; exit 0
-      - make test-user-operations; exit 0
-      - make test-throttling; exit 0
+      # - make test-authentication-flow; exit 0
+      # - make test-links-and-cookies; exit 0
+      # - make test-template-flow; exit 0
+      # - make test-user-operations; exit 0
+      # - make test-throttling; exit 0
       - make test-session-timeout; exit 0
       - echo "Test run completed."
       - |
