--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -50,6 +50,13 @@ phases:
 
   post_build:
     commands:
+      # CodeBuild doesn't like that the reports don't have a .xml extension
+      # ...and silently fails to report any test contents. Just an empty report.
+      - |
+        for file in functional=test-reports/*; do
+          cp "$file" "${file}.xml"
+        done
+
       - |
         if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
           export testsuites="$testsuites cbc-integration"
@@ -64,7 +71,7 @@ artifacts:
 reports:
   functional-test-reports:
     files:
-      - "**/*"
+      - "*.xml"
     base-directory: functional-test-reports
     discard-paths: yes
     file-format: JUNITXML
