--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -4,6 +4,7 @@ env:
   variables:
     testsuites: >-
       platform-admin-flow
+      links-and-cookies
 
 phases:
   install:
@@ -36,7 +37,7 @@ phases:
         fi
       - make test-platform-admin-flow; exit 0
       # - make test-authentication-flow; exit 0
-      # - make test-links-and-cookies; exit 0
+      - make test-links-and-cookies; exit 0
       # - make test-template-flow; exit 0
       # - make test-user-operations; exit 0
       # - make test-throttling; exit 0
