--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -3,8 +3,14 @@ version: 0.2
 env:
   variables:
     testsuites: >-
+      broadcast-flow
       platform-admin-flow
+      authentication-flow
       links-and-cookies
+      template-flow
+      user-operations
+      throttling
+      session-timeout
 
 phases:
   install:
