Revert "Remove report-test-results.py"
This reverts commit 7739321323dd85635b590655047ce9370fa108cf.

--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -49,6 +49,11 @@ phases:
       - make test-throttling; exit 0
       - make test-session-timeout; exit 0
       - echo "Test run completed."
+      - |
+        if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
+          export testsuites="$testsuites cbc-integration"
+        fi
+        python3.12 ./scripts/report-test-results.py $(pwd) $testsuites
 
   post_build:
     commands:
