EAS-2860: Migrate tests over to Playwright (#162)
* Straight up vibe code a Playwright migration

* Add artefacts

* Remove the nvm nonsense

* Bump Playwright version

* Install test browser during bootstrap

* Respect --headed option, but enable it by default

* Create Playwright traces for each test

* Shim wait_for_element

* Make locator tuples more consistent

* Port wait_for_page_load_completion

* Rewrite text_is_on_page_no_wait

* Add click_button_by_text helper

* Really speed up logins by not waiting to check an error is there

* Fix finding hidden elements

* Make locator public in ElementWrapper

* Fix asserting checkboxes?

* Allow click_element_by_link_text to take either buttons or anchors

* Replace NoSuchElementException and TimeoutException with just TimeoutError

* Allow click_element_by_link_text to use buttons

* Fix GovUkAlertsPage constructor

* Add timeout to click_element_by_link_text

* Fix asserting rejection_details_is_closed and co

* Use assert_text_is_on_page in admin tests

* Only match visible links in click_element_by_link_text

* Fix clicking Templates in menu

* Unselect checkbox fix

* Try to fix feedback tests (target 'send', not a non-existent continue button)

* Try to be headless in CI

* Add report section to CodeBuild

* Remove old screenshot logic

* Remove .xml req for reports

* Don't run tests in 'fake parallel' (this makes logging supressed)

* Log during tests

* Fix session timeout test dialog assertions

* Fix session timeout dialog tests

* Group traces by passed/failed directories

* Be more consistent with timeouts

* Only try one test report flow?

* (Temp) Don't run most tests

* Add page load waiting to platform admin test

* Use base-directory for reports

* Capture traces in artifacts

* Don't waste time installing Chrome and co

* Add discard-paths

* (Temp) Only platform admin tests

* Copy reports to .xml suffix?

* Remove report-test-results.py

* Typo :(

* Add another test suite

* Increase timeout in

--- a/.gitignore
+++ b/.gitignore
@@ -64,7 +64,10 @@ target/
 /venv
 docker.env
 
-screenshots
+functional-test-reports/
+functional-test-traces/
+logs/
+
 settings.json
 
 # Tenant-specific Dockerfile
