--- a/.codepipeline/buildspec-tests-build.yml
+++ b/.codepipeline/buildspec-tests-build.yml
@@ -17,24 +17,6 @@ phases:
     runtime-versions:
       python: 3.12
 
-    commands:
-      - apt update
-      - apt install -y xvfb libxi6 libgconf-2-4 libnss3
-
-      # install google chrome
-      - wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
-      - sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list'
-      - apt-get -y update
-      - apt-get install -y google-chrome-stable
-
-      # install chromedriver
-      - apt-get install -yqq unzip jq
-      - curl -s https://googlechromelabs.github.io/chrome-for-testing/last-known-good-versions-with-downloads.json | jq -rc '.channels.Stable.downloads.chromedriver[] | select(.platform == "linux64").url' > /tmp/chromedriver_url
-      - wget -O /tmp/chromedriver.zip `cat /tmp/chromedriver_url`
-      - unzip -o -j /tmp/chromedriver.zip chromedriver-linux64/chromedriver -d /usr/local/bin/
-
-      - apt-get install -f -y
-
   pre_build:
     commands:
       - cd $CODEBUILD_SRC_DIR
@@ -51,6 +33,7 @@ phases:
     commands:
       # Need to add CBC integration into the list of test reports, in the proper place, if it is executed - hence the below
       # The if below doesn't check for truthiness, but instead "true", because CodePipeline *requires* a value - therefore it will *always* be truthy.
+      - export CI=true # Switch to headless mode
       - make test-broadcast-flow; exit 0
       - |
         if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
@@ -74,6 +57,13 @@ phases:
 
   post_build:
     commands:
+      # CodeBuild doesn't like that the reports don't have a .xml extension
+      # ...and silently fails to report any test contents. Just an empty report.
+      - |
+        for file in functional-test-reports/*; do
+          cp "$file" "${file}.xml"
+        done
+
       - |
         if [ "$ENABLE_CBC_INTEGRATION_TESTS" = "true" ]; then
           export testsuites="$testsuites cbc-integration"
@@ -82,5 +72,13 @@ phases:
 
 artifacts:
   files:
-    - screenshots/*
     - functional-test-reports/*
+    - functional-test-traces/**/*
+
+reports:
+  functional-test-reports:
+    files:
+      - "*.xml"
+    base-directory: functional-test-reports
+    discard-paths: yes
+    file-format: JUNITXML
